# QuickSig

./: .coverage  .cursorrules  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  run_check.sh  test_duval.py
autoencoder/: train_compressor.py
demos/: plot_ou_process.py  plot_rough_ou_process.py  plot_rough_volatility.py
examples/: augmentation_examples.ipynb  driver_error.py  logode_sphere.py  mkw_sphere.py  plot_dimensionalities.py  signature_examples.ipynb  test.py  windowing_examples.ipynb
quicksig/: __init__.py  augmentations.py  batch_ops.py  get_signature_dim.py  get_signatures.py  log_signature.py  logode.py  path_signature.py  signature.py  tensor_ops.py  test.py  utils.py
quicksig/algebra/: elements.py
quicksig/analytics/: __init__.py  metrics_and_norms.py  signature_sizes.py  wong_zakai.py
quicksig/control_lifts/: __init__.py  branched_signature_ito.py  log_signature.py  path_signature.py  signature_types.py
quicksig/controls/: __init__.py  augmentations.py  drivers.py  paths_types.py
quicksig/drivers/: drivers.py  wong_zakai.py
quicksig/hopf_algebras/: __init__.py  bck_trees.py  elements.py  free_lie.py  hopf_algebra_types.py  mkw_trees.py  rooted_trees.py  series.py
quicksig/integrators/: __init__.py  log_ode.py  series.py
quicksig/paths/: __init__.py  path_augmentations.py  paths.py
quicksig/rde/: augmentations.py  drivers.py
quicksig/rde_bench/: ou_process.py  plot_hparam_evolution.py  plot_rde.py  rlfbm_variance_demo.py  rough_ou_process.py  rough_volatility.py  rp_kalman.py
quicksig/rdes/: augmentations.py  drivers.py  logode.py  rde_examples.py  rde_types.py  wong_zakai.py
quicksig/rough_paths/: metrics_and_norms.py
quicksig/signatures/: __init__.py  compute_log_signature.py  compute_path_signature.py  get_signature_dim.py  signature_ops.py  signature_transform.py  signature_types.py
quicksig/spde/: drivers.py  phi34.py
quicksig/vector_field_lifts/: __init__.py  bck_lift.py  butcher.py  lie_lift.py  mkw_lift.py  vector_field_lift_types.py
stochastax/analytics/: signature_sizes.py  wong_zakai.py
stochastax/control_lifts/: __init__.py  branched_signature_ito.py  log_signature.py  path_signature.py  signature_types.py
stochastax/controls/: augmentations.py  drivers.py
stochastax/hopf_algebras/: __init__.py  bck_trees.py  elements.py  free_lie.py  hopf_algebra_types.py  mkw_trees.py
stochastax/integrators/: integrator_types.py  log_ode.py  series.py
stochastax/vector_field_lifts/: __init__.py  bck_lift.py  butcher.py  lie_lift.py  mkw_lift.py  vector_field_lift_types.py
tests/: batch_ops_benchmark.py  benchmark.py  benchmark_baseline.json  conftest.py  test.py  test_augmentations.py  test_batch_ops.py  test_helpers.py  test_path_signature.py  test_tensor_ops.py
tests/hopf_algebras/: test_bck.py  test_free_lie.py  test_rooted_trees.py
tests/integrators/: test_log_ode.py
tests/test_analytics/: test_metrics_and_norms.py  test_signature_sizes.py
tests/test_control_lifts/: test_log_signature.py  test_path_signature.py  test_signature_ops.py
tests/test_controls/: test_augmentations.py  test_drivers.py  test_paths_types.py
tests/test_drivers/: test_drivers.py
tests/test_hopf_algebras/: test_bck_trees.py  test_free_lie.py  test_mkw_trees.py  test_rooted_trees.py
tests/test_integrators/: test_log_ode.py  test_mkw_and_bck_log_ode.py
tests/test_paths/: test_augmentations.py  test_metrics_and_norms.py  test_paths.py
tests/test_rde_bench/: test_ou_process.py  test_rough_ou_process.py  test_rough_volatility.py
tests/test_rdes/: test_augmentations.py  test_drivers.py  test_path_ops.py
tests/test_signatures/: test_compute_log_signature.py  test_compute_path_signature.py  test_get_signature_dim.py  test_memory_reqs.py  test_signature_ops.py
tests/test_spde/: test_phi34.py
tests/test_vector_field_lifts/: test_butcher.py  test_lyndon_brackets.py
