[project]
name = "quicksig"
version = "0.1.0"
description = "A fast signature computation library using JAX"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Luke Thompson", email = "luke.thompson@sydney.edu.au"}
]
dependencies = [
    "jax[cuda12]>=0.6.0",
]

[project.optional-dependencies]
compressor = [
    "equinox>=0.12.2",
    "optax>=0.2.4",
]
dev = [
    "numpy>=2.2.5",
    "lovely-jax>=0.1.3",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "mypy>=1.8.0",
    "black>=24.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=quicksig"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
