[project]
name = "quicksig"
version = "0.1.1"
description = "A fast path signature and log signature computation library using JAX."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Luke Thompson", email = "luke.thompson@sydney.edu.au" }]
maintainers = [
    { name = "Luke Thompson", email = "luke.thompson@sydney.edu.au" },
]
keywords = [
    "signatures",
    "path-signatures",
    "log-signatures",
    "jax",
    "machine-learning",
    "time-series",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "fbm>=0.3.0",
    "jax>=0.6.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/quicksig"
"Bug Reports" = "https://github.com/yourusername/quicksig/issues"
"Source" = "https://github.com/yourusername/quicksig"
"Documentation" = "https://github.com/yourusername/quicksig#readme"

[project.optional-dependencies]
cuda = ["jax[cuda12]>=0.6.0"]
dev = [
    "numpy>=2.2.5",
    "lovely-jax>=0.1.3",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-timeout>=2.3.1",
    "mypy>=1.8.0",
    "black>=24.2.0",
    "matplotlib>=3.10.1",
    "signax>=0.2.1",
    "rich>=13.7.0",
    "tqdm>=4.67.1",
]
all = ["quicksig[cuda,dev]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quicksig"]

[tool.hatch.build.targets.sdist]
include = ["/quicksig", "/tests", "/README.md", "/LICENSE", "/pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=quicksig --cov-report=term-missing"
minversion = "8.0"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
